--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,8 +7,7 @@ body {
   background-image: url('/imgs/brotherhood-studio-_7lr3Fs9QHU-unsplash.jpg');
   background-size: cover;
   background-position: center;
-  background-repeat: no-repeat;
-  background-attachment: fixed; /* parallax-like effect on scroll */
+  background-repeat: no-repeat; /* parallax-like effect on scroll */
   min-height: 100vh;
   display: flex;
   align-items: center;
